traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Erreur de compilation :
TraversalZigZag:4: error: '(' expected but identifier found.
    if getX()==((getMondeLargeur()-1) && getY()==(getMondeHauteur()-1) )
       ^